--- a/EventGuru02/Abdullah/Abdullah-Settings.storyboard
+++ b/EventGuru02/Abdullah/Abdullah-Settings.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="22505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="SxB-Sa-vdO">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="32700.99.1234" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="SxB-Sa-vdO">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22504"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22685"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="UIMenu" message="Requires Xcode 11 or later." minToolsVersion="11.0" requiredIntegratedClassName="UICommandDiff"/>
@@ -211,7 +211,7 @@
                                         </buttonConfiguration>
                                         <connections>
                                             <action selector="logout:" destination="wZk-RX-goV" eventType="touchUpInside" id="6Uj-S6-Ydc"/>
-                                            <segue destination="lSO-qW-QQX" kind="show" identifier="Begin" id="YoT-Md-XLW"/>
+                                            <segue destination="lSO-qW-QQX" kind="presentation" identifier="Begin" modalPresentationStyle="fullScreen" id="YoT-Md-XLW"/>
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZkU-so-LNN">
@@ -346,15 +346,15 @@
             </objects>
             <point key="canvasLocation" x="5542.7480916030536" y="-59.154929577464792"/>
         </scene>
-        <!--ChooseScreen-->
+        <!--UserLogin-->
         <scene sceneID="L5X-t2-Zme">
             <objects>
-                <viewControllerPlaceholder storyboardName="ChooseScreen" id="lSO-qW-QQX" sceneMemberID="viewController">
+                <viewControllerPlaceholder storyboardName="UserLogin" id="lSO-qW-QQX" sceneMemberID="viewController">
                     <navigationItem key="navigationItem" id="hqu-bT-FaN"/>
                 </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dIS-Uj-e9E" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4152" y="359"/>
+            <point key="canvasLocation" x="4127" y="464"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="knM-uQ-koV">
@@ -400,7 +400,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="2HO-WM-sem" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4898.4732824427483" y="500.7042253521127"/>
+            <point key="canvasLocation" x="4761" y="501"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="6ks-ZR-i8O">
@@ -453,7 +453,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="tmL-uN-C0w" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1366" y="686"/>
+            <point key="canvasLocation" x="3581" y="786"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="38a-Vm-w7g">
@@ -471,19 +471,19 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="pbJ-50-BU0" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3173.2824427480914" y="-59.154929577464792"/>
+            <point key="canvasLocation" x="2782" y="-80"/>
         </scene>
     </scenes>
     <resources>
         <image name="Chevron right" width="10" height="10.5"/>
         <systemColor name="secondarySystemBackgroundColor">
-            <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.94901960780000005" green="0.94901960780000005" blue="0.96862745100000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
         <systemColor name="systemRedColor">
-            <color red="1" green="0.23137254901960785" blue="0.18823529411764706" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="1" green="0.23137254900000001" blue="0.18823529410000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
